--- a/package.json
+++ b/package.json
@@ -5,12 +5,14 @@
   "scripts": {
     "start": "node ./bin/www",
     "devstart": "nodemon ./bin/www",
-    "serverstart": "DEBUG=odinbook-api:* npm run devstart"
+    "serverstart": "DEBUG=odinbook-api:* npm run devstart",
+    "test": "export NODE_ENV=TEST && jest"
   },
   "dependencies": {
     "bcryptjs": "^2.4.3",
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
+    "dotenv": "^16.0.3",
     "express": "~4.16.1",
     "express-session": "^1.17.3",
     "http-errors": "~1.6.3",
@@ -21,6 +23,10 @@
     "passport-local": "^1.0.0"
   },
   "devDependencies": {
-    "nodemon": "^2.0.21"
+    "@faker-js/faker": "^7.6.0",
+    "jest": "^29.5.0",
+    "mongodb-memory-server": "^8.12.1",
+    "nodemon": "^2.0.21",
+    "supertest": "^6.3.3"
   }
 }
