--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "jest": "^29.5.0",
     "mongodb-memory-server": "^8.12.1",
     "nodemon": "^2.0.21",
-    "supertest": "^6.3.3"
+    "supertest": "^6.3.3",
+    "supertest-session": "^4.1.0"
   }
 }
