--- a/.env.example
+++ b/.env.example
@@ -2,3 +2,5 @@ MONGODB_URL = yourMongodbUrl
 SESSION_SECRET = someSerect
 JWT_SECRET = anotherSerect
 CORS_ORIGIN = localHostorYourClientAppUrl
+VISITOR_ID = yourVisitorUserId
+VISITOR_PASSWORD = yourVisitorUserPassword
